[package]
name = "status_bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
byte-unit = "4.0.19"
cnx = { git="https://github.com/mjkillough/cnx.git" }
cnx-contrib = { git="https://github.com/mjkillough/cnx.git" }
process-stream = "0.4.1"
serde = { version = "1.0.183", features = ["serde_derive", "derive"] }
serde_derive = "1.0.183"
serde_json = "1.0.104"
sysinfo = "0.29.7"
tokio = { version = "1.31.0", features = ["rt"] }
tokio-stream = "0.1.14"
